--- a/estilo.css
+++ b/estilo.css
@@ -60,7 +60,7 @@ html{
 .inicio{
     background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),url(img/fondo.jpg);
     background-size: cover;
-    height: 100hv;
+    height: 100vh;
     color: #fff;
     display: flex;
     align-items: center;
